# Zephyr

./: .gitignore  LICENSE  README.md  index.html  mise.toml  package.json
.github/workflows/: publish.yml
src/: App.css  bindings.ts  main.tsx  router.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  logging.rs  main.rs  runtime.rs  settings.rs  state.rs  tray.rs
src-tauri/src/dbus/: asusd.rs  mod.rs  ppd.rs  supergfxd.rs
src-tauri/src/ipc/: commands.rs  dto.rs  events.rs
src-tauri/src/services/: anime.rs  armoury.rs  aura.rs  backlight.rs  dashboard.rs  fan_curves.rs  gpu.rs  health.rs  mod.rs  performance.rs  platform.rs  power.rs  scsi.rs
src/features/dashboard/: runtime.tsx  useDraftState.ts
src/features/theme/: ThemeProvider.tsx
src/layout/: AppShell.tsx
src/routes/: ControlsPage.tsx  FanCurvesPage.tsx  LightingPage.tsx  OverviewPage.tsx  ProfilesPage.tsx  SettingsPage.tsx
src/themes/: catppuccin.css
