[package]
name = "zephyr"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "zephyr_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
tauri = { version = "2.10.3", features = ["tray-icon"] }
tauri-plugin-opener = "2.5.3"
tauri-plugin-notification = "2.3.3"
tauri-plugin-autostart = "2.5.1"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "time", "sync"] }
futures-util = "0.3.31"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
zbus = { version = "5.14.0", features = ["blocking", "tokio"] }
specta = "=2.0.0-rc.24"
specta-typescript = "0.0.11"
tauri-specta = { version = "=2.0.0-rc.24", features = ["derive", "typescript"] }
anyhow = "1.0.102"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
sysinfo = "0.37.2"
nvml-wrapper = "0.10.0"
