[package]
name = "zephyr"
version = "0.1.1"
description = "ASUS ROG Laptop Control Center for Linux"
authors = ["MareDevi"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "zephyr_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
tauri = { version = "2.10.3", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2.5.3"
tauri-plugin-notification = "2.3.3"
tauri-plugin-autostart = "2.5.1"
tauri-plugin-store = "2.4.2"
tokio = { version = "1.52.0", features = ["rt-multi-thread", "macros", "time", "sync"] }
futures-util = "0.3.32"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
zbus = { version = "5.14.0", features = ["blocking", "tokio"] }
specta = "=2.0.0-rc.24"
specta-typescript = "0.0.11"
tauri-specta = { version = "=2.0.0-rc.24", features = ["derive", "typescript"] }
anyhow = "1.0.102"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
sysinfo = "0.38.4"
nvml-wrapper = "0.12.1"
